# crates/kairo-daemon/src/api/mod.rs
@@ -32,6 +32,10 @@ pub fn router(state: AppState) -> Router {
             "/api/v1/actors/:id/statements",
             get(handlers::actors::list_statements_handler),
         )
+        .route(
+            "/api/v1/actors/:id/objects",
+            get(handlers::actors::list_objects_handler),
+        )
         .route("/api/v1/objects/:id", get(handlers::objects::handler))
         .route("/api/v1/statements/:id", get(handlers::statements::handler))
         .route(
